--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.6.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -14,26 +14,15 @@ repos:
   #   hooks:
   #     - id: pyupgrade
   #       args: [--py38-plus]
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.10.0
-    hooks:
-      - id: reorder-python-imports
-        args: [--py38-plus, --add-import, "from __future__ import annotations"]
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.2.0"
+    rev: "v0.4.10"
     hooks:
       # Run the linter.
       - id: ruff
         args: [--fix]
       # Run the formatter.
       - id: ruff-format
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.5.1"
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.368
     hooks:
-      - id: mypy
-        additional_dependencies: [types-all, rich]
-        language: python
-        types: [python]
-        files: '.*\.py[i]?'
-        exclude: ^tests/
-        args: [--config-file, pyproject.toml, --ignore-missing-imports]
+    - id: pyright
