--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ classifiers = [
 ]
 dependencies = [
   "typer==0.9.0",
-  "harborapi>=0.23.4",
-  "pydantic>=2.4.0",
+  "harborapi>=0.25.1",
+  "pydantic>=2.7.4",
   "trogon>=0.5.0",
   "platformdirs>=2.5.4",
   "tomli>=2.0.1",
@@ -44,6 +44,17 @@ dependencies = [
   "strenum>=0.4.15",
 ]
 dynamic = ["version", "readme"]
+
+[project.optional-dependencies]
+dev = [
+  "pytest>=7.2.0",
+  "pytest-cov>=4.0.0",
+  "pytest-mock>=3.10.0",
+  "pytest-timeout>=2.1.0",
+  "hypothesis>=6.62.1",
+  "ruff>=0.2.0",
+  "freezegun>=1.2.2",
+]
 
 [project.urls]
 Source = "https://github.com/unioslo/harbor-cli"
@@ -72,16 +83,7 @@ pattern = "<!-- changelog follows -->\n\n(.*)"
 path = "harbor_cli/__about__.py"
 
 [tool.hatch.envs.default]
-dependencies = [
-  "pytest>=7.2.0",
-  "pytest-cov>=4.0.0",
-  "pytest-mock>=3.10.0",
-  "pytest-timeout>=2.1.0",
-  "mypy>=0.991",
-  "hypothesis>=6.62.1",
-  "ruff>=0.2.0",
-  "freezegun>=1.2.2",
-]
+dependencies = ["harbor_cli[dev]"]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args}"
 cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=harbor_cli --cov=tests {args}"
@@ -122,7 +124,20 @@ exclude_lines = [
   "pass",
 ]
 
+
+[tool.pyright]
+pythonVersion = "3.8"
+venvPath = "."
+venv = ".venv"
+ignore = ["tests", "scripts", "docs/scripts"]
+typeCheckingMode = "strict"
+
 [tool.ruff]
+src = ["harbor_cli"]
+extend-exclude = ["tests", "harbor_cli/__init__.py"]
+
+[tool.ruff.lint]
+extend-select = ["I"]
 select = [
   "E", # pycodestyle
   "F", # pyflakes
@@ -131,20 +146,19 @@ ignore = [
   "E501", # line too long (we let ruff formatter handle this)
   "F541", # f-string is missing placeholders
 ]
-src = ["harbor_cli"]
-extend-exclude = ["tests"]
 
-[tool.ruff.per-file-ignores]
+
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402", "F401", "F403"]
 "harbor_cli/state.py" = ["E402"]
 "scripts/**" = ["D"]
 
-[tool.ruff.pydocstyle]
-convention = "numpy"
 
-[tool.mypy]
-python_version = "3.8"
-ignore_missing_imports = true
-strict = false
-exclude = ["tests"]
-enable_incomplete_feature = ["Unpack"]
+[tool.ruff.lint.isort]
+# Force one line per import to simplify diffing and merging
+force-single-line = true
+# Add annotations import to every file
+required-imports = ["from __future__ import annotations"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
